# dvr_code

./: .gitignore  CMakeLists.txt  Makefile  Makefile_master  Readme  angular_elements.f90  angular_mod.f90  batch_dvr_diag.sh  batch_radial_elements.sh  combine_elements.f90  combine_mod.f90  dvr_diag.f90  dvr_diag_mod.f90  dvr_spline_mod.f90  gen_ints_mod.f90  radial_check.f90  radial_elements.f90  radial_mod.f90  transf_ints.f90  transf_ints_2e_mod.f90
arpack/: Makefile  zneupd.f
src/: CombineInts.f90  CombineInts_alt.f90  DVRCore.f90  DVRData.f90  DVRInput.f90  DVRIntAng.f90  DVRIntAng_adt.f90.alt  DVRIntRad.f90  DVRmain.f90  DVRrhf.f90  Density.f90  DensityData.f90  DensityPrim.f90  FieldData.f90  FieldInts.f90  InputData.f90  OrbData.f90  OrbInts.f90  PrimOrbInts.f90  RHFData.f90  RadCheck.f90  ReadInput.f90  angular_utils.f90  const.f90  date.sh  dvr_diag.f90  dvr_diag_mod.f90  dvr_init_mod.f90  dvr_spline_mod.f90  input.f90  radial_mod.f90  rhf_mod.f90  util.f90
test/: dvr.inp
test/Be/: dvr.inp  input_pot.in
test/Be/chk_files/: FCIDUMP  dvr.out  fort.76  input_pot.out
test/Be/qc_basis/aug-cc-pv5z/: FCIDUMP.REMOVED.git-id  ccsd.out
test/Be/qc_basis/cc-pv5z/: FCIDUMP.REMOVED.git-id  ccsd.out
test/Be/qc_basis/d-aug-cc-pV5z/: FCIDUMP.REMOVED.git-id  ccsd.out
test/H/: dvr.inp
test/H/Results/: dvr.inp  dvr.out
test/H/chk_files/: FCIDUMP  dvr.out  fort.76  input_pot.out
test/He/: dvr.inp
test/He/chk_files/: dvr.out
test/He/qc_basis/aug-cc-pv5z/: FCIDUMP.REMOVED.git-id  ccsd.out
test/He/qc_basis/cc-pv5z/: ccsd.out
test/He/qc_basis/d-aug-cc-pv5z/: FCIDUMP.REMOVED.git-id  ccsd.out
test/He/rad_eq/: input_pot.in
test/He/rad_eq/chk_files/: FCIDUMP  fort.76  input_pot.out
test/He/rhf/: FCIDUMP  dvr.inp  dvr.out  eigenvectors_GLL0.dat.REMOVED.git-id  eigenvectors_GLL1.dat.REMOVED.git-id  eigenvectors_GLL2.dat.REMOVED.git-id  fort.81  input_pot.out  rhfvectors_GLL0.dat.REMOVED.git-id  rhfvectors_GLL1.dat.REMOVED.git-id  rhfvectors_GLL2.dat.REMOVED.git-id
test_be/: dvr.inp
test_he/: dvr.inp
utils/: 3dgrid  ang_2e_int_num.f90  dipole_ints_ang_num.f90  dipole_ints_num.f90  pyscf.grid.py
